TSVPORTAL-11155 - Changing portal version

--- a/app/views/epos-config.html
+++ b/app/views/epos-config.html
@@ -37,7 +37,7 @@
             ng-change="selectProductVersion()"
             ng-model="selectedProductVersion"
             ng-options="productVersion as productVersion.displayName for productVersion in productVersions">
-            <option selected default value="">Select Product Version</option>
+            <option selected default value="">Select ePOS config version</option>
           </select>
         </div>
       </li>
