--- a/app/views/epos-config.html
+++ b/app/views/epos-config.html
@@ -36,7 +36,7 @@
             id="productVersion"
             ng-change="selectProductVersion()"
             ng-model="selectedProductVersion"
-            ng-options="productVersion as productVersion.displayName for productVersion in productVersions | orderBy: 'displayName'">
+            ng-options="productVersion as productVersion.displayName for productVersion in productVersions | orderBy: 'build': true">
             <option selected default value="">Select ePOS config version</option>
           </select>
         </div>
