--- a/app/views/priceupdater-list.html
+++ b/app/views/priceupdater-list.html
@@ -23,7 +23,7 @@
 			<div class="col-xs-12 col-sm-6 col-md-4">
 			  <div class="form-group">
                 <label for="category">Category</label>
-                <select ng-model="search.categoryName" class="form-control" id="item-sales-category">
+                <select ng-model="search.categoryId" class="form-control" id="item-sales-category">
                   <option value="{{salesCategory.name}}"
                           ng-repeat="salesCategory in salesCategories | unique: 'salesCategoryId'">{{ salesCategory.name }}
                   </option>
@@ -54,10 +54,10 @@
 			<div class="col-xs-12 col-sm-6 col-md-4">
 				<div class="form-group">
 					<label for="taxIs">Tax Is</label>
-					<select name="Tax Is" ng-model="search.taxIs" class="form-control">
-						<option value="Included">Included</option>
-						<option value="Excluded">Excluded</option>
-						<option value="Exempt">Exempt</option>
+					<select name="Tax Is" ng-model="search.taxFilter" class="form-control">
+						<option value="true">Included</option>
+						<option value="false">Excluded</option>
+						<option>Exempt</option>
 				    </select>
 				</div>
 			</div>
@@ -89,10 +89,10 @@
         </thead>
         <tbody>
         <tr class="ng-scope" ng-repeat="priceupdater in priceUpdateRules">
-          <td>{{ priceupdater.categoryName }}</td>
-          <td>{{ priceupdater.priceType }}</td>
+          <td>{{ priceupdater.categoryId }}</td>
+          <td>{{ priceupdater.priceTypeId }}</td>
           <td>{{ priceupdater.currency }}</td>
-          <td>{{ priceupdater.taxIs }}</td>
+          <td>{{ priceupdater.taxFilter }}</td>
           <td>{{ priceupdater.startDate}}</td>
           <td>{{ priceupdater.endDate}}</td>
           <td>{{ priceupdater.createdByPerson.userName }}</td>
