--- a/app/views/directives/top-navigation-bar.html
+++ b/app/views/directives/top-navigation-bar.html
@@ -10,6 +10,9 @@
            data-backdrop="static" data-keyboard="false">
           <span class="fa fa-user" aria-hidden="true"></span>
         </a>
+        <a ng-click="changePassword()" type="button" class="logout-btn btn btn-default btn-lg" aria-label="Left Align" title="">
+          <span class="glyphicon glyphicon-log-out" aria-hidden="true"></span>
+        </a>
         <a ng-click="logout()" type="button" class="logout-btn btn btn-default btn-lg" aria-label="Left Align" title="logout">
           <span class="glyphicon glyphicon-log-out" aria-hidden="true"></span>
         </a>
