TSVPORTAL-6937 - Fix logout title

--- a/app/views/directives/top-navigation-bar.html
+++ b/app/views/directives/top-navigation-bar.html
@@ -13,7 +13,7 @@
         <a ng-click="changePassword()" type="button" class="logout-btn btn btn-default btn-lg" aria-label="Left Align" title="Change Password">
           <span class="glyphicon glyphicon-log-out" aria-hidden="true"></span>
         </a>
-        <a ng-click="logout()" type="button" class="logout-btn btn btn-default btn-lg" aria-label="Left Align" title="logout">
+        <a ng-click="logout()" type="button" class="logout-btn btn btn-default btn-lg" aria-label="Left Align" title="Logout">
           <span class="glyphicon glyphicon-log-out" aria-hidden="true"></span>
         </a>
       </div>
