TSVPORTAL-6937 - Add change password icon

--- a/app/views/directives/top-navigation-bar.html
+++ b/app/views/directives/top-navigation-bar.html
@@ -10,8 +10,8 @@
            data-backdrop="static" data-keyboard="false">
           <span class="fa fa-user" aria-hidden="true"></span>
         </a>
-        <a ng-click="changePassword()" type="button" class="logout-btn btn btn-default btn-lg" aria-label="Left Align" title="Change Password">
-          <span class="glyphicon glyphicon-log-out" aria-hidden="true"></span>
+        <a ng-click="changePassword()" type="button" class="settings-btn btn btn-default btn-lg" aria-label="Left Align" title="Change Password">
+          <span class="glyphicon glyphicon-lock" aria-hidden="true"></span>
         </a>
         <a ng-click="logout()" type="button" class="logout-btn btn btn-default btn-lg" aria-label="Left Align" title="Logout">
           <span class="glyphicon glyphicon-log-out" aria-hidden="true"></span>
