--- a/app/views/priceupdater-create.html
+++ b/app/views/priceupdater-create.html
@@ -19,7 +19,7 @@
 				   <div class="col-xs-12 col-sm-4">
 						<div class="form-group">
 							<label for="categoryName">Category*</label>
-							<select ng-model="rule.categoryId" class="form-control" id="item-sales-category">
+							<select ng-model="rule.categoryId" class="form-control" ng-disabled="isDisabled()" id="item-sales-category">
 	                  			<option value="{{salesCategory.id}}"
 	                          				ng-repeat="salesCategory in salesCategories | unique: 'salesCategoryId'">{{ salesCategory.name }}
 	                  			</option>
@@ -58,7 +58,7 @@
 					<div class="col-xs-12 col-sm-4">
 						<div class="form-group">
 							<label for="priceType">Price Type*</label>
-							<select name="Price Type" ng-model="rule.priceTypeId" class="form-control"
+							<select name="Price Type" ng-model="rule.priceTypeId" ng-disabled="isDisabled()" class="form-control"
 								ng-options="type.id as type.name for type in priceTypes">
 							</select>
 						</div>
@@ -66,7 +66,7 @@
 					<div class="col-xs-12 col-sm-4">
 						<div class="form-group">
 							<label for="taxIs">Tax Is</label>
-							<select name="Tax Is" ng-model="rule.taxFilter" class="form-control">
+							<select name="Tax Is" ng-model="rule.taxFilter" ng-disabled="isDisabled()" class="form-control">
 								<option value="true">Included</option>
 								<option value="false">Excluded</option>
 								<option>Exempt</option>
