--- a/app/views/priceupdater-list.html
+++ b/app/views/priceupdater-list.html
@@ -1,9 +1,11 @@
 <div class="module-container">
   <div class="row item-list-row">
-    <div class="col-xs-4">
+    <div class="col-xs-6">
     	<h2 class="view-name">{{ viewName }}</h2>
+    	<button class="btn btn-primary" tabindex="0" ng-show="isCRUD" ng-disabled="!hasSelectedAnyRules()" ng-click="showBulkExecuteActionModal('Apply Rules')">Apply Rules
+        </button>
     </div>
-    <div class="col-xs-8 text-right">
+    <div class="col-xs-6 text-right">
        <a href="#/priceupdater/create" ng-show="isCRUD" class="btn btn-primary">+ <span class="hidden-xs">Create Rule</span></a>
        <button class="btn btn-default" data-toggle="collapse" data-target="#search-collapse"
                aria-expanded="false"
@@ -71,9 +73,12 @@
     </div>
     <br>
     <div class="table-responsive">
-      <table infinite-scroll="loadPriceUpdaterRules()" class="table table-bordered table-hover ng-scope">
+      <table infinite-scroll="loadPriceUpdaterRules()" class="table table-bordered table-hover">
         <thead>
         <tr>
+          <th>
+            <input class="btn btn-default" style="margin-top:0px" type="checkbox" value="1" ng-model="allCheckboxesSelected" ng-click="selectAllCheckboxes()">
+          </th>
           <th>Category</th>
           <th>Price Type</th>
           <th>Tax Is</th>
@@ -88,15 +93,18 @@
         </thead>
         <tbody>
         <tr class="ng-scope" ng-repeat="priceupdater in priceUpdateRules">
+          <td>
+            <input class="btn btn-default" style="margin-top:0px" type="checkbox" value="1" ng-model="priceupdater.selected" >
+          </td>
           <td>{{ priceupdater.categoryName }}</td>
-          <td>{{ priceupdater.priceType }}</td>
+          <td>{{ priceupdater.priceTypeName }}</td>
           <td>{{ priceupdater.taxIs }}</td>
           <td>{{ priceupdater.startDate}}</td>
           <td>{{ priceupdater.endDate}}</td>
           <td>{{ priceupdater.createdByPerson.userName }}</td>
           <td>{{ priceupdater.updatedByPerson.userName }}</td>
-          <td>{{ dateUtility.formatTimestampForApp(priceupdater.createdOn) }}</td>
-          <td>{{ dateUtility.formatTimestampForApp(priceupdater.updatedOn) }}</td>
+          <td>{{ loadCreatedOn(priceupdater) }}</td>
+          <td>{{ loadUpdatedOn(priceupdater) }}</td>
           <td>
             <button class="btn btn-info btn-xs" ng-click="redirectToPriceUpdateRule(priceupdater.id, 'view')" tabindex="0">
               <i class="fa fa-file"></i>
@@ -105,7 +113,7 @@
               <i class="fa fa-pencil"></i>
             </button>
             <button class="btn btn-danger btn-xs"
-                    ng-click="deleteRecordDialog(priceUpdateRules[$index], ['categoryName', 'priceType', 'startDate', 'endDate'])"
+                    ng-click="deleteRecordDialog(priceUpdateRules[$index], ['categoryName', 'priceTypeName', 'startDate', 'endDate'])"
                     tabindex="0"
                     ng-show="isCRUD && showDeleteButton(priceupdater.startDate)">
               <i class="fa fa-trash"></i>
@@ -123,7 +131,26 @@
   </div>
 
 </div>
+<div class="modal fade delete-warning-modal">
+  <div class="modal-dialog">
+    <div class="modal-content">
 
+      <div class="modal-header">
+        <h3 class="modal-title">Are you sure?</h3>
+      </div>
+
+      <div class="modal-body">
+        <p>You are about to perform the following action: <strong>{{actionToExecute}}</strong></p>
+      </div>
+
+      <div class="modal-footer">
+        <button type="button" class="btn btn-danger" ng-click="executeAction()">Continue</button>
+        <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+      </div>
+
+    </div>
+  </div>
+</div>
 <form-success-modal></form-success-modal>
 
 <form-update-modal></form-update-modal>
