--- a/app/views/back-office-config.html
+++ b/app/views/back-office-config.html
@@ -24,7 +24,7 @@
   <div class="container">
 
     <ul class="navbar product-version-scrollable">
-      <li ng-show="selectedProductVersion" ng-repeat="module in modules | orderBy: orderBy" ng-class="{'active' : module === selectedModule}" class="ng-scope" role="button" ng-click="selectModule(module)">
+      <li ng-repeat="module in modules | orderBy: orderBy" ng-class="{'active' : module === selectedModule}" class="ng-scope" role="button" ng-click="selectModule(module)">
         <i class="icon-manage-transactions"></i>
         <div class="left-nav-option">
           <i class="icon-manage-discount"></i>
