--- a/app/views/back-office-config.html
+++ b/app/views/back-office-config.html
@@ -24,7 +24,7 @@
   <div class="container">
 
     <ul class="navbar product-version-scrollable">
-      <li ng-repeat="feature in portalFeatures | orderBy: orderBy" ng-class="{'active' : feature === selectedModule}" class="ng-scope" role="button" ng-click="selectFeature(feature)">
+      <li ng-repeat="feature in portalConfigurationFeatures | orderBy: orderBy" ng-class="{'active' : feature === selectedModule}" class="ng-scope" role="button" ng-click="selectFeature(feature)">
         <i class="icon-manage-transactions"></i>
         <div class="left-nav-option">
           <i class="icon-manage-discount"></i>
