--- a/app/views/back-office-config.html
+++ b/app/views/back-office-config.html
@@ -6,9 +6,14 @@
       <h3 class="modal-title">{{ selectedFeature.name || 'Back Office Configuration' }}</h3>
     </div>
     <div class="modal-body">
-      <div class="">
-
-
+      <div ng-repeat="option in configOptions" class="">
+        <label class="epos-config-label">{{option.name}}</label>
+        <ul style='list-style: none'>
+          <li ng-if="option.inputType === 'RADIO_BUTTON'" ng-repeat="value in option.values" class="ng-scope" role="button" >
+            <input type="radio" class="maring-right-5px" id="{{option.id}}" name="{{option.id}}" value="{{value.value}}"/>
+            <label class="epos-config-label">{{value.name}}</label>
+          </li>
+        </ul>
       </div>
     </div>
     <div class="modal-footer">
