TSVPORTAL-11059 - Fix hide parameter

--- a/app/views/station-list.html
+++ b/app/views/station-list.html
@@ -263,7 +263,7 @@
                 <i class="fa fa-file"></i>
               </a>
 
-              <a class="btn btn-primary btn-xs" ng-href="#/station-edit/{{station.id}}" ng-hide="canEdit(surveyQuestion.endDate) || !isCRUD">
+              <a class="btn btn-primary btn-xs" ng-href="#/station-edit/{{station.id}}" ng-hide="canEdit(station.endDate) || !isCRUD">
                 <i class="fa fa-pencil"></i>
               </a>
 
