--- a/app/views/back-office-config.html
+++ b/app/views/back-office-config.html
@@ -5,17 +5,72 @@
     <div class="modal-header">
       <h3 class="modal-title">{{ "Back Office Configuration - " + selectedFeature.name || 'Back Office Configuration' }}</h3>
     </div>
-    <div class="modal-body">
-      <div ng-repeat="option in configOptions" class="">
-        <label class="epos-config-label">{{option.name}}</label>
-        <ul style='list-style: none'>
-          <li ng-if="option.inputType === 'RADIO_BUTTON'" ng-repeat="value in option.values" class="ng-scope" role="button" >
-            <input type="radio" class="maring-right-5px" id="{{option.id}}" name="{{option.id}}" value="{{value.value}}"/>
-            <label class="epos-config-label">{{value.name}}</label>
-          </li>
-        </ul>
+
+    <fieldset>
+      <div class="form-group" ng-repeat="option in configOptions">
+        <span class="control-label col-sm-2">{{ option.name }}: </span>
+        <div class="col-sm-10">
+          <label ng-if="option.inputType === 'RADIO_BUTTON'" ng-repeat="value in option.values" class="radio-custom radio-inline" style="padding-top: 3px;" data-initialize="radio" id="radios-inline-3">
+            <input class="inline" ng-model="formData[field.name]"  type="radio" id="{{option.id}}" name="{{option.id}}" value="{{value.value}}"/>
+            <span class="">{{ value.name }}</span>
+          </label>
+        </div>
       </div>
-    </div>
+    </fieldset>
+
+    <!--<fieldset>-->
+      <!--<div class="control-group" ng-repeat="option in configOptions">-->
+        <!--<label class="control-label col-sm-2" >{{ option.name }} :</label>-->
+        <!--<div class="controls" ng-repeat="value in option.values">-->
+          <!--<label class="radio inline">{{ value.name }} : </label>-->
+          <!--<input ng-if="option.inputType === 'RADIO_BUTTON'" class="radio inline" ng-model="formData[field.name]"  type="radio" id="{{option.id}}" name="{{option.id}}" value="{{value.value}}"/>-->
+        <!--</div>-->
+      <!--</div>-->
+    <!--</fieldset>-->
+    <!--<div class="modal-body">-->
+
+
+
+      <!--<div class="row">-->
+        <!--<div class="col-xs-12 col-sm-6">-->
+          <!--<div class="col-xs-12 col-sm-6">-->
+            <!--<div class="form-group" ng-repeat="option in configOptions">-->
+              <!--<span >{{ option.name }} : </span>-->
+              <!--<div ng-repeat="value in option.values">-->
+                <!--<input ng-if="option.inputType === 'RADIO_BUTTON'" class="radio inline" ng-model="formData[field.name]"  type="radio" id="{{option.id}}" name="{{option.id}}" value="{{value.value}}"/>-->
+                <!--<span class="radio inline">{{ value.name }} : </span>-->
+              <!--</div>-->
+            <!--</div>-->
+          <!--</div>-->
+        <!--</div>-->
+      <!--</div>-->
+      <!--<form name="form" class="form-horizontal">-->
+        <!--<div class="row">-->
+          <!--<div class="col-xs-12 col-sm-6">-->
+            <!--<div class="col-xs-12 col-sm-6">-->
+              <!--<div class="form-group" ng-repeat="option in configOptions">-->
+                <!--<span >{{ option.name }} : </span>-->
+                <!--<div ng-repeat="value in option.values">-->
+                  <!--<input ng-if="option.inputType === 'RADIO_BUTTON'" class="radio inline" ng-model="formData[field.name]"  type="radio" id="{{option.id}}" name="{{option.id}}" value="{{value.value}}"/>-->
+                  <!--<span class="radio inline">{{ value.name }} : </span>-->
+                <!--</div>-->
+              <!--</div>-->
+            <!--</div>-->
+          <!--</div>-->
+        <!--</div>-->
+      <!--</form>-->
+
+
+      <!--<div ng-repeat="option in configOptions" class="">-->
+        <!--<label class="epos-config-label">{{option.name}}</label>-->
+        <!--<ul style='list-style: none'>-->
+          <!--<li ng-if="option.inputType === 'RADIO_BUTTON'" ng-repeat="value in option.values" class="ng-scope" role="button" >-->
+            <!--<input type="radio" class="maring-right-5px" id="{{option.id}}" name="{{option.id}}" value="{{value.value}}"/>-->
+            <!--<label class="epos-config-label">{{value.name}}</label>-->
+          <!--</li>-->
+        <!--</ul>-->
+      <!--</div>-->
+    <!--</div>-->
     <div class="modal-footer">
       <button class="btn btn-primary" type="submit" ng-disabled="isModuleConfigurationOptionsEmpty()" ng-hide="!isUserAvailableForEditAndCreate() || isModuleConfigurationOptionsEmpty()">Save</button>
       <button class="btn btn-danger" type="button" ng-disabled="isModuleConfigurationOptionsEmpty()" ng-hide="!isUserAvailableForEditAndCreate() || isModuleConfigurationOptionsEmpty()" ng-click="cancel()">Cancel</button>
