--- a/app/views/priceupdater-create.html
+++ b/app/views/priceupdater-create.html
@@ -19,7 +19,7 @@
 				   <div class="col-xs-12 col-sm-4">
 						<div class="form-group">
 							<label for="categoryName">Category*</label>
-							<select ng-model="rule.categoryId" class="form-control" ng-disabled="isDisabled()" id="item-sales-category" required="true"
+							<select name="Category" ng-model="rule.categoryId" class="form-control" ng-disabled="isDisabled()" id="item-sales-category" required="true"
 							 ng-options="salesCategory.id as salesCategory.name for salesCategory in salesCategories">
 	                  		</select>
 						</div>
