--- a/app/views/back-office-config.html
+++ b/app/views/back-office-config.html
@@ -11,13 +11,16 @@
         <span class="control-label col-sm-2">{{ option.name }}: </span>
         <div class="col-sm-10">
           <label ng-if="option.inputType === 'RADIO_BUTTON'" ng-repeat="value in option.values" class="radio-custom radio-inline" style="padding-top: 3px;" data-initialize="radio" id="radios-inline-3">
-            <input class="inline" ng-model="formData[field.name]"  type="radio" id="{{option.id}}" name="{{option.id}}" value="{{value.value}}"/>
+            <input class="inline" ng-model="formData[option.name]"  type="radio" id="{{option.id}}" name="{{option.id}}" value="{{value.value}}"/>
             <span class="">{{ value.name }}</span>
+          </label>
+          <label ng-if="option.inputType === 'PERCENTAGE_NUMBER'" class="radio-custom radio-inline" style="padding-top: 3px;" data-initialize="radio" id="radios-inline-4">
+            <input class="inline" ng-model="formData[option.name]"  type="number" ng-pattern="regexp.percentage" class="form-control" id="{{option.id}}" name="{{option.id}}"/>
           </label>
         </div>
       </div>
     </fieldset>
-    
+
     <div class="modal-footer">
       <button class="btn btn-primary" type="submit" ng-disabled="isModuleConfigurationOptionsEmpty()" ng-hide="!isUserAvailableForEditAndCreate() || isModuleConfigurationOptionsEmpty()">Save</button>
       <button class="btn btn-danger" type="button" ng-disabled="isModuleConfigurationOptionsEmpty()" ng-hide="!isUserAvailableForEditAndCreate() || isModuleConfigurationOptionsEmpty()" ng-click="cancel()">Cancel</button>
