--- a/app/views/item-list.html
+++ b/app/views/item-list.html
@@ -103,6 +103,7 @@
         </div>
 
         <div class="panel-footer text-right">
+          <button type="button" class="btn btn-default">Clear</button>
           <button ng-click="searchRecords()" class="btn btn-primary btn-search">
             <span class="fa fa-search" aria-hidden="true"></span>
             <span class="hidden-sm hidden-xs btn-label">Search</span>
