--- a/app/views/item-list.html
+++ b/app/views/item-list.html
@@ -104,7 +104,7 @@
 
         <div class="panel-footer text-right">
           <button type="button" class="btn btn-default" ng-click="clearSearchFilters()" ng-show="showClearButton()">Clear</button>
-          <button class="btn btn-primary">Search</button>
+          <button type="submit" class="btn btn-primary">Search</button>
         </div>
       </form>
 
