--- a/app/views/item-list.html
+++ b/app/views/item-list.html
@@ -23,7 +23,7 @@
     </div>
 
     <div class="panel panel-default collapse no-transition" id="search-collapse">
-      <form class="form">
+      <form class="form" ng-submit="searchRecords()">
         <div class="panel-body">
           <div class="row">
 
