--- a/app/views/back-office-config.html
+++ b/app/views/back-office-config.html
@@ -10,12 +10,15 @@
       <div class="form-group" ng-repeat="option in configOptions">
         <span class="control-label col-sm-2">{{ option.name }}: </span>
         <div class="col-sm-10">
-          <label ng-if="option.inputType === 'RADIO_BUTTON'" ng-repeat="value in option.values" class="radio-custom radio-inline" style="padding-top: 3px;" data-initialize="radio" id="radios-inline-3">
+          <label ng-if="option.inputType === 'RADIO_BUTTON'" ng-repeat="value in option.values" class="radio-custom radio-inline" style="padding-top: 3px;" data-initialize="radio" >
             <input class="inline" ng-model="formData[option.name]"  type="radio" id="{{option.id}}" name="{{option.id}}" value="{{value.value}}"/>
             <span class="">{{ value.name }}</span>
           </label>
-          <label ng-if="option.inputType === 'PERCENTAGE_NUMBER'" class="radio-custom radio-inline" style="padding-top: 3px;" data-initialize="radio" id="radios-inline-4">
+          <label ng-if="option.inputType === 'PERCENTAGE_NUMBER'" class="radio-custom radio-inline" style="padding-top: 3px;" data-initialize="radio" >
             <input custom-validity class="inline" ng-model="formData[option.name]"  type="number" min="0" max="100" custom-pattern="decimalWithTwoDecimalPlacesCutExtraToTwoDecimal" step="0.10" class="form-control" id="{{option.id}}" name="{{option.id}}"/>
+          </label>
+          <label ng-if="option.inputType === 'NUMBER'" class="radio-custom radio-inline" style="padding-top: 3px;" data-initialize="radio" >
+            <input custom-validity class="inline" ng-model="formData[option.name]"  type="number" custom-pattern="number" step="1" class="form-control" id="{{option.id}}" name="{{option.id}}"/>
           </label>
         </div>
       </div>
