--- a/app/views/back-office-config.html
+++ b/app/views/back-office-config.html
@@ -15,10 +15,18 @@
             <span class="">{{ value.name }}</span>
           </label>
           <label ng-if="option.inputType === 'PERCENTAGE_NUMBER'" class="radio-custom radio-inline" style="padding-top: 3px;" data-initialize="radio" >
-            <input custom-validity class="inline" ng-model="formData[option.name]"  type="number" min="0" max="100" custom-pattern="decimalWithTwoDecimalPlacesCutExtraToTwoDecimal" step="0.10" class="form-control" id="{{option.id}}" name="{{option.id}}"/>
+            <input custom-validity class="inline" style="padding-top: 3px;" ng-model="formData[option.name]"  type="number" min="0" max="100" custom-pattern="decimalWithTwoDecimalPlacesCutExtraToTwoDecimal" step="0.10" class="form-control" id="{{option.id}}" name="{{option.id}}"/>
           </label>
           <label ng-if="option.inputType === 'NUMBER'" class="radio-custom radio-inline" style="padding-top: 3px;" data-initialize="radio" >
             <input custom-validity class="inline" ng-model="formData[option.name]"  type="number" custom-pattern="number" step="1" class="form-control" id="{{option.id}}" name="{{option.id}}"/>
+          </label>
+          <label ng-if="option.inputType === 'SELECT'" class="radio-custom radio-inline" style="padding-top: 3px;" data-initialize="radio" >
+            <select name="{{option.id}}" ng-model="formData[option.name]" class="form-control" style="height: 28px;">
+              <option value=""></option>
+              <option ng-repeat="optionValue in option.values"
+                      value="{{ optionValue.choiceCode }}">{{ optionValue.name }}
+              </option>
+            </select>
           </label>
         </div>
       </div>
