TSVPORTAL-11059 - Remove debug variable

--- a/app/views/station-create.html
+++ b/app/views/station-create.html
@@ -113,7 +113,7 @@
           required="true"
           ng-model="formData.startDate"
           end-date="maxStartDate">
-        </date-picker-field> {{maxStartDate}}
+        </date-picker-field>
       </div>
 
       <div class="col-xs-12 col-sm-6">
