--- a/app/views/back-office-config.html
+++ b/app/views/back-office-config.html
@@ -1,7 +1,7 @@
 <div class="module-container-epos-configuration">
   <error-dialog form-object="form" error-response="errorResponse" display="displayError">
   </error-dialog>
-  <form class="form-horizontal" name="reportOptions" ng-submit="saveBacOfficeConfig()">
+  <form class="form-horizontal" name="reportOptions" ng-submit="saveBackOfficeConfig()">
     <div class="modal-header">
       <h3 class="modal-title">{{ "Back Office Configuration - " + selectedFeature.name || 'Back Office Configuration' }}</h3>
     </div>
@@ -11,17 +11,17 @@
         <span class="control-label col-sm-2">{{ option.name }}: </span>
         <div class="col-sm-10">
           <label ng-if="option.inputType === 'RADIO_BUTTON'" ng-repeat="value in option.values" class="radio-custom radio-inline" style="padding-top: 3px;" data-initialize="radio" >
-            <input class="inline" ng-model="formData[option.name]"  type="radio" id="{{option.id}}" name="{{option.id}}" value="{{value.value}}"/>
+            <input class="inline" ng-model="formData[calculateFormDataKeyForConfigOption(option)]"  type="radio" id="{{option.id}}" name="{{option.id}}" value="{{value.value}}"/>
             <span class="">{{ value.name }}</span>
           </label>
           <label ng-if="option.inputType === 'PERCENTAGE_NUMBER'" class="radio-custom radio-inline" style="padding-top: 3px;" data-initialize="radio" >
-            <input custom-validity class="inline" style="padding-top: 3px;" ng-model="formData[option.name]"  type="number" min="0" max="100" custom-pattern="decimalWithTwoDecimalPlacesCutExtraToTwoDecimal" step="0.10" class="form-control" id="{{option.id}}" name="{{option.id}}"/>
+            <input custom-validity class="inline" style="padding-top: 3px;" ng-model="formData[calculateFormDataKeyForConfigOption(option)]"  type="number" min="0" max="100" custom-pattern="decimalWithTwoDecimalPlacesCutExtraToTwoDecimal" step="0.10" class="form-control" id="{{option.id}}" name="{{option.id}}"/>
           </label>
           <label ng-if="option.inputType === 'NUMBER'" class="radio-custom radio-inline" style="padding-top: 3px;" data-initialize="radio" >
-            <input custom-validity class="inline" ng-model="formData[option.name]"  type="number" custom-pattern="number" step="1" class="form-control" id="{{option.id}}" name="{{option.id}}"/>
+            <input custom-validity class="inline" ng-model="formData[calculateFormDataKeyForConfigOption(option)]"  type="number" custom-pattern="number" step="1" class="form-control" id="{{option.id}}" name="{{option.id}}"/>
           </label>
           <label ng-if="option.inputType === 'SELECT'" class="radio-custom radio-inline" style="padding-top: 3px;" data-initialize="radio" >
-            <select name="{{option.id}}" ng-model="formData[option.name]" class="form-control" style="height: 28px;">
+            <select name="{{option.id}}" ng-model="formData[calculateFormDataKeyForConfigOption(option)]" class="form-control" style="height: 28px;">
               <option value=""></option>
               <option ng-repeat="optionValue in option.values"
                       value="{{ optionValue.choiceCode }}">{{ optionValue.name }}
@@ -33,8 +33,8 @@
     </fieldset>
 
     <div class="modal-footer">
-      <button class="btn btn-primary" type="submit" ng-disabled="isModuleConfigurationOptionsEmpty()" ng-hide="!isUserAvailableForEditAndCreate() || isModuleConfigurationOptionsEmpty()">Save</button>
-      <button class="btn btn-danger" type="button" ng-disabled="isModuleConfigurationOptionsEmpty()" ng-hide="!isUserAvailableForEditAndCreate() || isModuleConfigurationOptionsEmpty()" ng-click="cancel()">Cancel</button>
+      <button class="btn btn-primary" type="submit" >Save</button>
+      <button class="btn btn-danger" type="button" ng-click="cancel()">Cancel</button>
     </div>
   </form>
 </div>
