--- a/app/views/priceupdater-list.html
+++ b/app/views/priceupdater-list.html
@@ -94,7 +94,7 @@
         <tbody>
         <tr class="ng-scope" ng-repeat="priceupdater in priceUpdateRules">
           <td>
-            <input class="btn btn-default" style="margin-top:0px" type="checkbox" value="1" ng-model="priceupdater.selected" >
+            <input class="btn btn-default" style="margin-top:0px" type="checkbox" value="1" ng-show="isValidForRuleApply(priceupdater)" ng-model="priceupdater.selected" >
           </td>
           <td>{{ priceupdater.categoryName }}</td>
           <td>{{ priceupdater.priceTypeName }}</td>
@@ -115,7 +115,7 @@
             <button class="btn btn-danger btn-xs"
                     ng-click="deleteRecordDialog(priceUpdateRules[$index], ['categoryName', 'priceTypeName', 'startDate', 'endDate'])"
                     tabindex="0"
-                    ng-show="isCRUD && showDeleteButton(priceupdater.startDate)">
+                    ng-show="isCRUD && showDeleteButton(priceupdater)">
               <i class="fa fa-trash"></i>
             </button>
           </td>
