--- a/app/views/back-office-config.html
+++ b/app/views/back-office-config.html
@@ -11,7 +11,7 @@
         <span class="control-label col-sm-2">{{ option.name }}: </span>
         <div class="col-sm-10">
           <label ng-if="option.inputType === 'RADIO_BUTTON'" ng-repeat="value in option.values" class="radio-custom radio-inline" style="padding-top: 3px;" data-initialize="radio" >
-            <input class="inline" ng-model="formData[option.ngModelIdentifier]"  type="radio" id="{{option.id}}" name="{{option.id}}" value="value.value"/>
+            <input class="inline" ng-model="formData[option.ngModelIdentifier]"  type="radio" id="{{option.id}}" name="{{option.id}}" ng-value="value.value"/>
             <span class="">{{ value.name }}</span>
           </label>
           <label ng-if="option.inputType === 'PERCENTAGE_NUMBER'" class="radio-custom radio-inline" style="padding-top: 3px;" data-initialize="radio" >
