TSVPORTAL-11164: show inouts when loading is done

--- a/app/views/back-office-config.html
+++ b/app/views/back-office-config.html
@@ -7,7 +7,7 @@
     </div>
 
     <fieldset>
-      <div class="form-group" ng-repeat="option in configOptions">
+      <div ng-if="!isFeatureOptionsLoadingInProgress" class="form-group" ng-repeat="option in configOptions">
         <span class="control-label col-sm-2">{{ option.name }}: </span>
         <div class="col-sm-10">
           <label ng-if="option.inputType === 'RADIO_BUTTON'" ng-repeat="value in option.values" class="radio-custom radio-inline" style="padding-top: 3px;" data-initialize="radio" >
