--- a/app/views/back-office-config.html
+++ b/app/views/back-office-config.html
@@ -11,17 +11,17 @@
         <span class="control-label col-sm-2">{{ option.name }}: </span>
         <div class="col-sm-10">
           <label ng-if="option.inputType === 'RADIO_BUTTON'" ng-repeat="value in option.values" class="radio-custom radio-inline" style="padding-top: 3px;" data-initialize="radio" >
-            <input class="inline" ng-model="formData[option.ngModelIdentifier]"  type="radio" id="{{option.id + '-' + $index}}" name="{{option.ngModelIdentifier}}" ng-value="value.value"/>
+            <input class="inline" ng-model="formData[option.ngModelIdentifier].value"  type="radio" id="{{option.id + '-' + $index}}" name="{{option.ngModelIdentifier}}" ng-value="value.value"/>
             <span class="">{{ value.name }}</span>
           </label>
           <label ng-if="option.inputType === 'PERCENTAGE_NUMBER'" class="radio-custom radio-inline" style="padding-top: 3px;" data-initialize="radio" >
-            <input custom-validity class="inline" style="padding-top: 3px;" ng-model="formData[option.ngModelIdentifier]"  type="number" min="0" max="100" custom-pattern="decimalWithTwoDecimalPlacesCutExtraToTwoDecimal" step="0.10" class="form-control" id="{{option.id}}" name="{{option.id}}"/>
+            <input custom-validity class="inline" style="padding-top: 3px;" ng-model="formData[option.ngModelIdentifier].value"  type="number" min="0" max="100" custom-pattern="decimalWithTwoDecimalPlacesCutExtraToTwoDecimal" step="0.10" class="form-control" id="{{option.id}}" name="{{option.id}}"/>
           </label>
           <label ng-if="option.inputType === 'NUMBER'" class="radio-custom radio-inline" style="padding-top: 3px;" data-initialize="radio" >
-            <input custom-validity class="inline" ng-model="formData[option.ngModelIdentifier]"  type="number" custom-pattern="number" step="1" class="form-control" id="{{option.id}}" name="{{option.ngModelIdentifier}}"/>
+            <input custom-validity class="inline" ng-model="formData[option.ngModelIdentifier].value"  type="number" custom-pattern="number" step="1" class="form-control" id="{{option.id}}" name="{{option.ngModelIdentifier}}"/>
           </label>
           <label ng-if="option.inputType === 'SELECT'" class="radio-custom radio-inline" style="padding-top: 3px;" data-initialize="radio" >
-            <select name="{{option.ngModelIdentifier}}" ng-model="formData[option.ngModelIdentifier]" class="form-control" style="height: 28px;">
+            <select name="{{option.ngModelIdentifier}}" ng-model="formData[option.ngModelIdentifier].value" class="form-control" style="height: 28px;">
               <option value=""></option>
               <option ng-repeat="optionValue in option.values"
                       value="{{ optionValue.choiceCode }}">{{ optionValue.name }}
