--- a/app/views/back-office-config.html
+++ b/app/views/back-office-config.html
@@ -8,20 +8,20 @@
 
     <fieldset>
       <div ng-if="!isFeatureOptionsLoadingInProgress" class="form-group" ng-repeat="option in configOptions">
-        <span class="control-label col-sm-2">{{ option.name }}: </span>
+        <label class="control-label col-sm-2">{{ option.name }}: </label>
         <div class="col-sm-10">
           <label ng-if="option.inputType === 'RADIO_BUTTON'" ng-repeat="value in option.values" class="radio-custom radio-inline" style="padding-top: 3px;" data-initialize="radio" >
-            <input class="inline" ng-model="formData[option.ngModelIdentifier].value"  type="radio" id="{{option.id + '-' + $index}}" name="{{option.ngModelIdentifier}}" ng-value="value.value"/>
-            <span class="">{{ value.name }}</span>
+            <input class="inline" style="margin-left: -3px;" ng-model="formData[option.ngModelIdentifier].value"  type="radio" id="{{option.id + '-' + $index}}" name="{{option.ngModelIdentifier}}" ng-value="value.value"/>
+            <span class="" style="margin-left: 17px;">{{ value.name }}</span>
           </label>
           <label ng-if="option.inputType === 'PERCENTAGE_NUMBER'" class="radio-custom radio-inline" style="padding-top: 3px;" data-initialize="radio" >
-            <input custom-validity class="inline" style="padding-top: 3px;" ng-model="formData[option.ngModelIdentifier].value"  type="number" min="0" max="100" custom-pattern="decimalWithTwoDecimalPlacesCutExtraToTwoDecimal" step="0.10" class="form-control" id="{{option.id}}" name="{{option.id}}"/>
+            <input class="inline" style="padding-top: 3px;" ng-model="formData[option.ngModelIdentifier].value"  type="number" step="0.10"  id="{{option.id}}" name="{{option.id}}"/>
           </label>
           <label ng-if="option.inputType === 'NUMBER'" class="radio-custom radio-inline" style="padding-top: 3px;" data-initialize="radio" >
-            <input custom-validity class="inline" ng-model="formData[option.ngModelIdentifier].value"  type="number" custom-pattern="number" step="1" class="form-control" id="{{option.id}}" name="{{option.ngModelIdentifier}}"/>
+            <input class="inline form-control" ng-model="formData[option.ngModelIdentifier].value"  type="number" step="1" id="{{option.id}}" name="{{option.ngModelIdentifier}}"/>
           </label>
           <label ng-if="option.inputType === 'SELECT'" class="radio-custom radio-inline" style="padding-top: 3px;" data-initialize="radio" >
-            <select name="{{option.ngModelIdentifier}}" ng-model="formData[option.ngModelIdentifier].value" class="form-control" style="height: 28px;">
+            <select name="{{option.ngModelIdentifier}}" ng-model="formData[option.ngModelIdentifier].value" class="inline form-control" style="height: 28px;">
               <option value=""></option>
               <option ng-repeat="optionValue in option.values"
                       value="{{ optionValue.choiceCode }}">{{ optionValue.name }}
@@ -29,22 +29,9 @@
             </select>
           </label>
         </div>
-        <div class="col-sm-10">
-          <!--<span class="control-label col-sm-2">Start Date: </span>-->
-          <!--<p class="input-group" style="margin: 27px 18px -2px;">-->
-            <!--<span class="input-group-btn">-->
-              <!--<span class="btn btn-default disabled"><i class="glyphicon glyphicon-calendar"></i></span>-->
-            <!--</span>-->
-            <!--<input name="StartDate"-->
-                   <!--type="text"-->
-                   <!--class="form-control"-->
-                   <!--ng-model="formData[option.ngModelIdentifier].startDate"-->
-                   <!--style="width: auto"-->
-            <!--/>-->
-          <!--</p>-->
-
-          <div class="col-xs-12 col-sm-6" style="margin: 27px 18px -2px;">
-            <date-picker-field disable="isDisabled()" form="form" name="EffectiveFrom" label="Effective From" ng-model="formData[option.ngModelIdentifier].startDate"></date-picker-field>
+        <div class="col-sm-4">
+          <div class="col-xs-4 col-sm-4" style="margin: 27px 18px -2px;">
+            <date-picker-field disable="isDisabled()" form="form" name="EffectiveFrom" label="Start Date" ng-model="formData[option.ngModelIdentifier].startDate"></date-picker-field>
           </div>
         </div>
       </div>
