--- a/app/views/change-password.html
+++ b/app/views/change-password.html
@@ -36,7 +36,7 @@
             <label for="currentPassword" class="col-sm-4 control-label">Current Password</label>
 
             <div class="col-sm-8">
-              <input name="currentPassword" required="true" custom-validity custom-pattern="word" type="text" class="form-control" id="currentPassword"
+              <input name="currentPassword" required="true" custom-validity custom-pattern="word" type="password" class="form-control" id="currentPassword"
                      placeholder="Current Password" ng-model="credentials.currentPassword"/>
             </div>
           </div>
