TSVPORTAL-6937 - Remove scope rewrite

--- a/app/views/change-password.html
+++ b/app/views/change-password.html
@@ -57,6 +57,7 @@
             </div>
           </div>
         </div>
+        {{credentials}}
         <div class="modal-footer">
           <a href="/#/" class="btn btn-default">Cancel</a>
           <button type="submit" class="btn btn-primary">Change</button>
