TSVPORTAL-11164: form data key recalculated

--- a/app/views/back-office-config.html
+++ b/app/views/back-office-config.html
@@ -28,9 +28,9 @@
               </option>
             </select>
           </label>
-          <div class="col-sm-12">
+          <div class="col-sm-12" style="margin-top: 2px;">
             <div class="col-sm-1">
-              <date-picker-field form="form" name="EffectiveFrom" label="Start Date" ng-model="formData[option.ngModelIdentifier].startDate"></date-picker-field>
+              <date-picker-field form="form" name="EffectiveFrom" label="Start Date" ng-model="formData[option.ngModelIdentifier].startDate" custom-effective="true"></date-picker-field>
             </div>
           </div>
         </div>
