TSVPORTAL-11059 - Adding tooltip for maximum start date before past in details page

--- a/app/views/station-create.html
+++ b/app/views/station-create.html
@@ -123,7 +123,8 @@
           disable-past="true"
           required="true"
           ng-model="formData.startDate"
-          end-date="maxStartDate">
+          end-date="maxStartDate"
+          data-toggle="tooltip" data-placement="left" title="Disabled since this company station is already in use">
         </date-picker-field>
       </div>
 
