--- a/app/views/item-list.html
+++ b/app/views/item-list.html
@@ -122,7 +122,7 @@
         <th></th>
         <th>Code</th>
         <th>Name</th>
-        <th>ePOS Display Name</th>
+        <th>POS Display Name</th>
         <th>
           <abbr title="Stock Owner Reference Number">S.O. Ref. #</abbr>
         </th>
