TSVPORTAL-11164: tooltip message calculated

--- a/app/views/back-office-config.html
+++ b/app/views/back-office-config.html
@@ -11,11 +11,10 @@
         <span class="control-label col-sm-2">{{ option.name }}
           <i class="fa fa-info-circle"
              style="font-size:18px;color: #5bc0de"
-             tooltip="Tooltip Right"
+             tooltip="{{toolTipMessage(option)}}"
              tooltip-placement="right"
              tooltip-trigger="click"
           >
-
           </i> :
         </span>
         <div class="col-sm-10">
