TSVPORTAL-6937 - Adding error highlit on new password field

--- a/app/views/change-password.html
+++ b/app/views/change-password.html
@@ -43,7 +43,7 @@
           <div class="form-group">
             <label for="newPassword" class="col-sm-4 control-label">New Password</label>
 
-            <div class="col-sm-8">
+            <div class="col-sm-8" ng-class="{ 'has-error' : changePasswordForm.newPassword.$invalid && submitted }">
               <input name="newPassword" required="true" custom-validity custom-pattern="password" type="password" class="form-control" id="newPassword" placeholder="New Password"
                      ng-model="credentials.newPassword"/>
             </div>
