TSVPORTAL-6937 - Adding error highlit on password mismatch field

--- a/app/views/change-password.html
+++ b/app/views/change-password.html
@@ -40,18 +40,18 @@
                      placeholder="Current Password" ng-model="credentials.currentPassword"/>
             </div>
           </div>
-          <div class="form-group">
+          <div class="form-group" ng-class="{ 'has-error' : (changePasswordForm.newPassword.$invalid || passwordMismatch) && submitted }">
             <label for="newPassword" class="col-sm-4 control-label">New Password</label>
 
-            <div class="col-sm-8" ng-class="{ 'has-error' : (changePasswordForm.newPassword.$invalid || passwordMismatch) && submitted }">
+            <div class="col-sm-8">
               <input name="newPassword" required="true" custom-validity custom-pattern="password" type="password" class="form-control" id="newPassword" placeholder="New Password"
                      ng-model="credentials.newPassword"/>
             </div>
           </div>
-          <div class="form-group">
+          <div class="form-group" ng-class="{ 'has-error' : (changePasswordForm.newPasswordConfirm.$invalid || passwordMismatch) && submitted }">
             <label for="newPasswordConfirm" class="col-sm-4 control-label">Confirm New Password</label>
 
-            <div class="col-sm-8" ng-class="{ 'has-error' : (changePasswordForm.newPasswordConfirm.$invalid || passwordMismatch) && submitted }">
+            <div class="col-sm-8">
               <input name="newPasswordConfirm" required="true" custom-validity custom-pattern="password" type="password" class="form-control" id="newPasswordConfirm"
                      placeholder="Confirm New Password" ng-model="credentials.newPasswordConfirm"/>
             </div>
