TSVPORTAL-6937 - Rename button

--- a/app/views/change-password.html
+++ b/app/views/change-password.html
@@ -59,7 +59,7 @@
         </div>
         <div class="modal-footer">
           <a href="/#/" class="btn btn-default">Cancel</a>
-          <button type="submit" class="btn btn-primary" ng-click="submitted = true">Change</button>
+          <button type="submit" class="btn btn-primary" ng-click="submitted = true">Submit</button>
         </div>
       </div>
     </div>
