--- a/app/views/category-list.html
+++ b/app/views/category-list.html
@@ -64,6 +64,7 @@
       </div>
       <div class="panel-footer text-right">
         <button type="button" class="btn btn-default" ng-disabled="!showClearButton()" ng-click="clearSearch()">Clear</button>
+        <button type="submit" class="btn btn-primary">Search</button>
       </div>
       </form>
       
